Change APP_KEY heroku value to generated secret

--- a/app.json
+++ b/app.json
@@ -59,7 +59,7 @@
   "env": {
     "APP_KEY": {
       "description": "This key is used to create app cookies en secure attachments.",
-      "value": "base64:If1gJN4pyycXTq+WS5TjneDympKuu+8SKvTl6RZnhJg="
+      "generator": "secret"
     }
   }
 }
